--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.application.name = currency-exchange
+server.port =8000
+spring.config.import =option al:configserver:http://localhost:8888
