--- a/limitservice/src/main/resources/application.properties
+++ b/limitservice/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.config.import =optional:configserver:http://localhost:8888
-limits-service.minimum=2
-limits-service.maximum=997
+spring.application.name = limits-service
