--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-spring.application.name = currency-exchange
+spring.application.name = currency-exchange-service
 server.port =8000
-spring.config.import =option al:configserver:http://localhost:8888
+spring.cloud.config.enabled=false
+
+spring.jps.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create 
