--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-spring.application.name = currency-exchange-service
-server.port =8000
-spring.cloud.config.enabled=false
+spring.application.name=currency-exchange
+server.port=8000
 
-spring.jps.show-sql=true
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create 
+spring.h2.console.enabled=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
