--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
 spring.cloud.config.import-check.enabled=false.
 application.name = currency-conversion-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
